# fuelscan-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: check.yml  test.yml
bins/fuelscan-core/: Cargo.toml
bins/fuelscan-core/src/: main.rs
bins/fuelscan-core/src/block_handle/: blocks.rs  mod.rs  process.rs  transactions.rs
bins/fuelscan-core/src/block_read/: mod.rs
bins/fuelscan-core/src/database/: mod.rs
migrations/2023-08-15-135109_create_blocks/: down.sql  up.sql
migrations/2023-08-15-135112_create_transactions/: up.sql
migrations/2023-08-15-135134_create_coinbases/: down.sql  up.sql
migrations/2023-08-15-135140_create_contracts/: up.sql
migrations/2023-08-15-135146_create_accounts/: up.sql
migrations/2023-08-15-135213_create_assets/: up.sql
migrations/2023-08-15-135243_create_nfts/: up.sql
migrations/2023-08-15-135251_create_check_point/: up.sql
migrations/2023-08-20-041201_create_calls/: down.sql  up.sql
migrations/2023-08-27-133207_create_address_coin_balances/: down.sql  up.sql
migrations/2023-08-27-133214_create_address_coin_balances_daily/: down.sql  up.sql
models/: Cargo.toml
models/src/: account.rs  assets.rs  block.rs  call.rs  coinbase.rs  contract.rs  db.rs  lib.rs  schema.rs  transaction.rs
src/: main.rs
src/block_handle/: mod.rs
src/block_read/: mod.rs
src/database/: mod.rs
