[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["bin/fuelscan-core", "bin/fuelscan-api", "models"]


[workspace.dependencies]
models = { path = "models" }

tokio = { version = "1.29.1", features = ["full"] }
fuel-core-client = { version = "0.17.13", features = ["default", "dap"] }
fuel-core-types = { version = "0.17.13", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
async-trait = "0.1.71"
futures = "0.3.28"
thiserror = "1.0.43"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
num_enum = "0.6.1"
anyhow = "1.0.71"
dotenv = "0.15.0"
flume = "0.10.14"
chrono = "*"

diesel = { version = "2.0.3", features = [
    "postgres",
    "r2d2",
    "serde_json",
    "numeric",
    "chrono",
    "postgres_backend",
] }
diesel-async = { version = "0.2.1", features = ["postgres"] }
diesel-derive-enum = { version = "^2.0.1", features = ["postgres"] }

[profile.release]
debug = 1
panic = 'abort'
