[workspace.package]
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["bin/fuelscan","models"]
resolver = "2"

[workspace.dependencies]
models = { path = "models" }
tokio = { version = "1.29.1", features = ["full"] }
fuel-core-client = { version = "0.20.4", features = ["default", "dap"] }
fuel-core-types = { version = "0.20.4", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
async-trait = "0.1.71"
futures = "0.3.28"
thiserror = "1.0.43"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
num_enum = "0.6.1"
anyhow = "1.0.71"
dotenv = "0.15.0"
flume = "0.10.14"
chrono = "*"
rayon = "1.7.0"
num_cpus = "1.16.0"


diesel = { version = "2.0.3", features = [
    "postgres",
    "r2d2",
    "serde_json",
    "numeric",
    "chrono",
] }
diesel-async = { version = "0.2.1", features = ["postgres"] }
diesel-derive-enum = { version = "^2.0.1", features = ["postgres"] }
derive_builder = "0.12.0"


[profile.dev]
opt-level = 1           # Use slightly better optimizations.
overflow-checks = false # Disable integer overflow checks.
panic = 'abort'         # Abort on panic.

[profile.release]
debug = 1
panic = 'abort'
lto = true
