[package]
name = "models"
version.workspace = true
edition.workspace = true

[dependencies]
diesel = { workspace = true, features = ["postgres", "r2d2"] }
diesel-async = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
fuel-core-client = { workspace = true, features = ["default", "dap"] }
