[package]
name = "models"
version.workspace = true
edition.workspace = true

[dependencies]
diesel = { workspace = true, features = ["postgres", "r2d2", "serde_json"] }
diesel-async = { workspace = true }
diesel-derive-enum = { workspace = true, features = ["postgres"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
fuel-core-client = { workspace = true, features = ["default", "dap"] }
