[package]
name = "fuelscan-core"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = { workspace = true }

tokio = { workspace = true }
fuel-core-client = { workspace = true }
fuel-core-types = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
num_enum = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
flume = { workspace = true }
diesel = { workspace = true }
